--- a/src/Fran/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/Fran/HomeBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'FranHomeBundle::layout.html.twig' %}
 
+{% block title 'Hello, world!' %}
+
 {% block body %}
-	Hello World!
+	<div class="hero-unit">
+		<h1>Hello, world!</h1>
+	</div>
 {% endblock %}
