--- a/src/Fran/HomeBundle/Resources/views/navbar.html.twig
+++ b/src/Fran/HomeBundle/Resources/views/navbar.html.twig
@@ -1,5 +1,6 @@
 <ul class="nav">
     <li class="{% if section == 'home' %}active{% endif %}"><a href="{{ path('home') }}">Home</a></li>
     <li class="{% if section == 'post' %}active{% endif %}"><a href="{{ path('post') }}">Post</a></li>
+    <li class="{% if section == 'taxonomy' %}active{% endif %}"><a href="{{ path('taxonomy') }}">Taxonomy</a></li>
     <li class="{% if section == 'about' %}active{% endif %}"><a href="{{ path('about') }}">About</a></li>
 </ul>
