--- a/src/Fran/PostBundle/Resources/views/Post/edit.html.twig
+++ b/src/Fran/PostBundle/Resources/views/Post/edit.html.twig
@@ -8,7 +8,7 @@
 <form class="form-horizontal" action="{{ path('post_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     {{ form_widget(edit_form) }}
     <p>
-        <button type="submit">Edit</button>
+        <button class="btn btn-primary" type="submit">Edit</button>
     </p>
 </form>
 
@@ -21,7 +21,7 @@
     <li>
         <form action="{{ path('post_delete', { 'id': entity.id }) }}" method="post">
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button class="btn btn-danger" type="submit">Delete</button>
         </form>
     </li>
 </ul>
