--- a/src/Fran/PostBundle/Resources/views/Post/new.html.twig
+++ b/src/Fran/PostBundle/Resources/views/Post/new.html.twig
@@ -5,10 +5,10 @@
 {% block body %}
 <h1>Post creation</h1>
 
-<form action="{{ path('post_create') }}" method="post" {{ form_enctype(form) }}>
+<form class="form-horizontal" action="{{ path('post_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
     <p>
-        <button type="submit">Create</button>
+        <button class="btn btn-primary" type="submit">Create</button>
     </p>
 </form>
 
