--- a/src/Fran/PostBundle/Resources/views/Taxonomy/edit.html.twig
+++ b/src/Fran/PostBundle/Resources/views/Taxonomy/edit.html.twig
@@ -1,9 +1,14 @@
+{% extends 'FranPostBundle:Taxonomy:base_taxonomy.html.twig' %}
+
+{% block title 'Taxonomy edit' %}
+
+{% block body %}
 <h1>Taxonomy edit</h1>
 
-<form action="{{ path('taxonomy_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+<form class="form-horizontal" action="{{ path('taxonomy_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     {{ form_widget(edit_form) }}
     <p>
-        <button type="submit">Edit</button>
+        <button class="btn btn-primary" type="submit">Edit</button>
     </p>
 </form>
 
@@ -16,7 +21,8 @@
     <li>
         <form action="{{ path('taxonomy_delete', { 'id': entity.id }) }}" method="post">
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button class="btn btn-danger" type="submit">Delete</button>
         </form>
     </li>
 </ul>
+{% endblock %}
