--- a/src/Fran/PostBundle/Resources/views/Taxonomy/index.html.twig
+++ b/src/Fran/PostBundle/Resources/views/Taxonomy/index.html.twig
@@ -1,3 +1,8 @@
+{% extends 'FranPostBundle:Taxonomy:base_taxonomy.html.twig' %}
+
+{% block title 'Taxonomy list' %}
+
+{% block body %}
 <h1>Taxonomy list</h1>
 
 <table class="records_list">
@@ -14,7 +19,7 @@
         <tr>
             <td><a href="{{ path('taxonomy_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{{ entity.name }}</td>
-            <td>{{ entity.type }}</td>
+            <td>{{ entity.namedtype }}</td>
             <td>
                 <ul>
                     <li>
@@ -37,3 +42,4 @@
         </a>
     </li>
 </ul>
+{% endblock %}
