--- a/src/Fran/PostBundle/Resources/views/Taxonomy/new.html.twig
+++ b/src/Fran/PostBundle/Resources/views/Taxonomy/new.html.twig
@@ -1,9 +1,14 @@
+{% extends 'FranPostBundle:Taxonomy:base_taxonomy.html.twig' %}
+
+{% block title 'Taxonomy creation' %}
+
+{% block body %}
 <h1>Taxonomy creation</h1>
 
-<form action="{{ path('taxonomy_create') }}" method="post" {{ form_enctype(form) }}>
+<form class="form-horizontal" action="{{ path('taxonomy_create') }}" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
     <p>
-        <button type="submit">Create</button>
+        <button class="btn btn-primary" type="submit">Create</button>
     </p>
 </form>
 
@@ -14,3 +19,4 @@
         </a>
     </li>
 </ul>
+{% endblock %}
