--- a/src/Fran/PostBundle/Resources/views/Taxonomy/show.html.twig
+++ b/src/Fran/PostBundle/Resources/views/Taxonomy/show.html.twig
@@ -1,3 +1,8 @@
+{% extends 'FranPostBundle:Taxonomy:base_taxonomy.html.twig' %}
+
+{% block title 'Taxonomy '~entity %}
+
+{% block body %}
 <h1>Taxonomy</h1>
 
 <table class="record_properties">
@@ -35,3 +40,4 @@
         </form>
     </li>
 </ul>
+{% endblock %}
