Added Secured to the navbar

--- a/src/Fran/HomeBundle/Resources/views/navbar.html.twig
+++ b/src/Fran/HomeBundle/Resources/views/navbar.html.twig
@@ -2,5 +2,6 @@
     <li class="{% if section == 'home' %}active{% endif %}"><a href="{{ path('home') }}">Home</a></li>
     <li class="{% if section == 'post' %}active{% endif %}"><a href="{{ path('post') }}">Post</a></li>
     <li class="{% if section == 'taxonomy' %}active{% endif %}"><a href="{{ path('taxonomy') }}">Taxonomy</a></li>
+    <li class="{% if section == 'secured' %}active{% endif %}"><a href="{{ path('secured_home') }}">Secured</a></li>
     <li class="{% if section == 'about' %}active{% endif %}"><a href="{{ path('about') }}">About</a></li>
 </ul>
